<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friendizer</string>
    <string name="my_profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="nearby">Nearby</string>
    <string name="connections">Connections</string>
    <string name="achievements">Achievements</string>
    <string name="gifts">Gifts</string>
    <string name="action_history">Action History</string>
    <string name="refresh_title">Refresh</string>
    <string name="logout_title">Logout</string>
    <string name="invite_title">Invite</string>
    <string name="block_title">Block</string>
    <string name="feedback_title">Feedback</string>
    <string name="settings_title">Settings</string>
    <string name="more_title">More</string>
    <string name="about_title">About</string>
    <string name="please_wait">Please wait…</string>
    <string name="change_status">Change Status</string>
    <string name="points">points</string>
    <string name="coins">coins</string>
    <string name="matching">matching</string>
    <string name="owned">owned</string>
    <string name="owner">owner</string>
    <string name="chat">Chat</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="loading">Loading…</string>
    <string name="friendizer_logo">Friendizer Logo</string>
    <string name="invitation_msg">Meet new friends, based on your interests.</string>
    <string name="made_by">Made By</string>
    <string name="team_agly">Team AGLY</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="sort_by">Sort by</string>
    <string name="view_by">View by</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="actionbar_activity_not_found">Failed to open intent</string>
    <string name="send">Send</string>
    <string name="mapAPIKey">0R54sIbhKTeZ9hTY5ntHtWV1qgbbPY1g_UI3K8A</string>

    <!-- C2DM -->


    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add account...</string>

    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Connect To The Cloud</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To The Cloud</string>

    <!-- Message text [CHAR LIMIT=NONE] -->
    <string name="contacting_server">Contacting server...</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Footer text for "Disconnect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_disconnect">Do you want to disconnect?</string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_error">Failed to register to friendizer</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_succeeded">Successfully registered to friendizer</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="unregistration_succeeded">Unegistered %1$s for C2DM messaging.</string>

</resources>