<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/refresh" android:icon="@drawable/ic_menu_refresh" android:title="@string/refresh_title">
    </item><item
        android:id="@+id/view_by"
        android:icon="@drawable/ic_menu_friendslist"
        android:title="@string/view_by"/>
    <item
        android:id="@+id/sort"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/sort_by">
    </item>
    <item
        android:id="@+id/facebook_friends"
        android:icon="@drawable/facebook_icon"
        android:title="@string/facebook_friends">
    </item>
    <item
        android:id="@+id/invite"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/invite_title">
    </item>
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_title"/>
    

</menu>