<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/friendizer_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/madeBy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/made_by"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/teamAGLY"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/team_agly"
        android:textSize="16dp" />
    
    <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/friendizer_logo"
        android:src="@drawable/agly_meme" /> -->

</LinearLayout>